force-app/main/default/objects/NineDocs__Document__c/NineDocs__Document__c.object-meta.xml
<CustomObject>
    <description>Represents a document that has been generated and attached to a Salesforce record.</description>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>