force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__AttachmentId__c</fullName>
    <label>AttachmentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>