force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__FileType__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__FileType__c</fullName>
    <formula>TEXT(NineDocs__TemplateId__r.NineDocs__FileType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Type</label>
    <type>Text</type>
</CustomField>