force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>