force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__Status__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
                <default>true</default>
                <label>Generated</label>
            </value>
            <value>
                <fullName>Mailed</fullName>
            </value>
            <value>
                <fullName>Pending Customer Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>