force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>NineDocs__Template__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>