force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__TemplateName__c</fullName>
    <formula>NineDocs__TemplateId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Name</label>
    <type>Text</type>
</CustomField>