force-app/main/default/objects/NineDocs__Document__c/fields/NineDocs__UserId__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>