force-app/main/default/objects/NineDocs__Document__c/listViews/NineDocs__All.listView-meta.xml
<ListView>
    <fullName>NineDocs__All</fullName>
    <columns>NAME</columns>
    <columns>NineDocs__FileType__c</columns>
    <columns>NineDocs__TemplateId__c</columns>
    <columns>NineDocs__TemplateName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NineDocs__AttachmentId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>