force-app/main/default/objects/NineDocs__Document__c/listViews/NineDocs__All1.listView-meta.xml
<ListView>
    <fullName>NineDocs__All1</fullName>
    <columns>NAME</columns>
    <columns>NineDocs__FileType__c</columns>
    <columns>NineDocs__Status__c</columns>
    <columns>NineDocs__TemplateName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>